--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,3 +27,16 @@ jobs:
     steps:
       - name: Print message to terminal
         run: echo "Hello 🌏!"
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Print message to terminal
+      run: echo "Hello 🌏!"
+    - name: Install dependencies
+      run: npm ci
+    - name: Build
+      run: npm run build
+
