--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,6 +30,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: hello_world_job
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -42,3 +43,15 @@ jobs:
     - name: Test
       run: npm run test
 
+post-comment:
+    runs-on: ubuntu-latest
+
+    needs: [hello_world_job, build]
+
+    steps:
+      - name: Post comment
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            All jobs have finished! 🎉
