--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -45,6 +45,8 @@ jobs:
 
 post-comment:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
 
     needs: [hello_world_job, build]
 
